--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-  "name": "vite-test",
+  "name": "clebsonsh-github-io",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "prod": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "i18next": "^21.8.13",
-    "i18next-browser-languagedetector": "^6.1.4",
-    "i18next-http-backend": "^1.4.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-i18next": "^11.18.0"
-  },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.5",
-    "vite": "^2.9.9"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
+    "vite": "^3.2.0"
   }
 }
